--- a/Netrom/Components/Pages/Counter.razor
+++ b/Netrom/Components/Pages/Counter.razor
@@ -7,6 +7,9 @@
 
 <p role="status">Current count: @currentCount</p>
 
+
 <button class="btn btn-primary" @onclick="IncrementCount">Click me</button>
+
+<NewButton currentCount="@currentCount"></NewButton>
 
 
