All Repository patterns done

--- a/Netrom/Components/Pages/UserPage.razor
+++ b/Netrom/Components/Pages/UserPage.razor
@@ -10,4 +10,6 @@
     
     <DataGridColumn TItem="User" Field="FirstName" Caption="FirstName"></DataGridColumn>
     <DataGridColumn TItem="User" Field="LastName" Caption="LastName"></DataGridColumn>
+    <DataGridColumn TItem="User" Field="Birthday" Caption="Birthday"></DataGridColumn>
+    <DataGridColumn TItem="User" Field="Gender" Caption="Gender"></DataGridColumn>
 </DataGrid>
