--- a/Netrom/Components/Pages/UserPage.razor
+++ b/Netrom/Components/Pages/UserPage.razor
@@ -12,4 +12,5 @@
     <DataGridColumn TItem="User" Field="LastName" Caption="LastName"></DataGridColumn>
     <DataGridColumn TItem="User" Field="Birthday" Caption="Birthday"></DataGridColumn>
     <DataGridColumn TItem="User" Field="Gender" Caption="Gender"></DataGridColumn>
+    <DataGridColumn TItem="User" Field="Gender" Caption="Gender"></DataGridColumn>
 </DataGrid>
