--- a/Netrom/Components/Layout/NavMenu.razor
+++ b/Netrom/Components/Layout/NavMenu.razor
@@ -1,6 +1,6 @@
 ﻿<div class="top-row ps-3 navbar navbar-dark">
     <div class="container-fluid">
-        <a class="navbar-brand" href="">Netrom</a>
+        <a class="navbar-brand" href="">Smart Workout App</a>
     </div>
 </div>
 
@@ -15,20 +15,32 @@
         </div>
 
         <div class="nav-item px-3">
-            <NavLink class="nav-link" href="counter">
-                <span class="bi bi-plus-square-fill-nav-menu" aria-hidden="true"></span> Counter
+            <NavLink class="nav-link" href="clients">
+                <span class="bi bi-plus-square-fill-nav-menu" aria-hidden="true"></span> Manage clients
             </NavLink>
         </div>
 
         <div class="nav-item px-3">
-            <NavLink class="nav-link" href="weather">
-                <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Weather
+            <NavLink class="nav-link" href="workouts">
+                <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Manage workouts
             </NavLink>
         </div>
 
         <div class="nav-item px-3">
-            <NavLink class="nav-link" href="abb">
-                <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> About
+            <NavLink class="nav-link" href="exercises">
+                <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Exercises
+            </NavLink>
+        </div>
+
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="exercisesLog">
+                <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Exercises Log
+            </NavLink>
+        </div>
+
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="profile">
+                <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Coach Profile
             </NavLink>
         </div>
     </nav>
