--- a/Netrom/Components/Pages/ExercisesPage.razor
+++ b/Netrom/Components/Pages/ExercisesPage.razor
@@ -4,7 +4,7 @@
 <h3>Exercises</h3>
 
 <Button Color="Color.Dark" Size="Size.Medium">
-    <NavLink class="butonAddExercise" href="addExercise">Add Exercise</NavLink>
+    <NavLink class="butonAddExercise" href="exercise/add">Add Exercise</NavLink>
 </Button>
 
 <DataGrid TItem = "Exercises"
@@ -17,3 +17,5 @@
     <DataGridColumn TItem="Exercises" Field="Type" Caption="Type"></DataGridColumn>
     
 </DataGrid>
+
+
