--- a/Netrom/Components/Pages/Workouts.razor
+++ b/Netrom/Components/Pages/Workouts.razor
@@ -3,6 +3,10 @@
 
 <h3>Workouts</h3>
 
+<Button Color="Color.Dark" Size="Size.Medium">
+    <NavLink class="butonAddWorkout" href="addWorkout" >Add Workout</NavLink>
+</Button>
+
 <DataGrid TItem = "Workout"
           Data = "@Workout"
           Filterable
