--- a/Netrom/Components/Pages/Clients.razor
+++ b/Netrom/Components/Pages/Clients.razor
@@ -1,33 +1,57 @@
-@page "/clients"
+@page "/users"
 @using Netrom.Repositories.Interfaces
 
 <h2>Clients</h2>
 
 <Button Color="Color.Dark" Size="Size.Medium">
-    <NavLink class="butonAddUser" href="addUser" >Add User</NavLink>
+    <NavLink class="butonAddUser" href="/user/add" >Add User</NavLink>
 </Button>
-<DataGrid TItem = "User"
-          Data = "@Users"
+
+<DataGrid TItem="User"
+          Data="@Users" 
           Filterable
           FilterMethod="DataGridFilterMethod.StartsWith"
-          Responsive>
-
-    <DataGridColumn TItem="User" Field="FirstName" Caption="FirstName"></DataGridColumn>
-    <DataGridColumn TItem="User" Field="LastName" Caption="LastName"></DataGridColumn>
-    <DataGridColumn TItem="User" Field="Birthday" Caption="Birthday"></DataGridColumn>
+          Responsive
+          Editable
+          AllowFiltering="true"
+          AllowPaging="true"
+          PageSize="5"
+          AllowSorting="true">
+>
+    <DataGridColumn TItem="User" Field="FirstName" Caption="First Name"></DataGridColumn>
+    <DataGridColumn TItem="User" Field="LastName" Caption="Last Name"></DataGridColumn>
+    <DataGridColumn TItem="User" Field="Birthday" DisplayFormat="{0:MM/dd/yyyy}" Caption="Birthday"></DataGridColumn>
     <DataGridColumn TItem="User" Field="Gender" Caption="Gender"></DataGridColumn>
-    <DataGridColumn TItem="User" Field="Gender" Caption="Gender"></DataGridColumn>
+    <DataGridCommandColumn TItem="User">
+        <EditCommandTemplate>
+            <Button Color="Color.Dark" Clicked="() => EditUser(context)">
+                <NavLink class="butonEdit" href="@($"/user/edit/{context.Item.Id}")">Edit</NavLink>
+            </Button>
+        </EditCommandTemplate>
+    </DataGridCommandColumn>
 </DataGrid>
+
 
 @code {
     [Inject]
     public IUserRepository UserRepository { get; set; }
-
+    
+    [Inject]
+    public NavigationManager Navigation { get; set; }
+    
     public List<User> Users;
         
     protected override void OnInitialized()
     {
-            
         Users = UserRepository.getUsers().ToList();
+    }
+    
+    private void EditUser(EditCommandContext<User> context)
+    {
+        if (context != null && context.Item != null)
+        {
+             string uri = $"/user/edit/{context.Item.Id}";
+            Navigation.NavigateTo($"/user/edit/{context.Item.Id}");
+        }
     }
 }
