--- a/Netrom/Components/Pages/AddEditExercisePage.razor
+++ b/Netrom/Components/Pages/AddEditExercisePage.razor
@@ -2,25 +2,28 @@
 @using Netrom.Entities
 @using Netrom.Repositories.Interfaces
 @page "/exercise/add"
-
+@page "/exercise/edit/{ExerciseId:int}"
 <h3>AddOrEdit Exercise</h3>
 
-<EditForm Model="@Exercise" OnValidSubmit=@SaveExercise FormName="editForm">
-    <InputNumber @bind-Value="Exercise.Id" hidden></InputNumber>
+@rendermode InteractiveServer
+<EditForm Model="@ExerciseDto" OnValidSubmit=@SaveExercise FormName="editForm">
+    <DataAnnotationsValidator/>
+    <InputNumber @bind-Value="ExerciseDto.Id" hidden></InputNumber>
     <div class="form-group">
         <label>Description :</label>
         <div>
-            <InputText @bind-Value="Exercise.Description" class="form-control col-sm-3"/>
-            <ValidationMessage For="@(() => Exercise.Description)"/>
+            <InputText @bind-Value="ExerciseDto.Description" class="form-control col-sm-3"/>
+            <ValidationMessage For="@(() => ExerciseDto.Description)"/>
         </div>
     </div>
     <div class="form-group">
         <label>Type :</label>
         <div>
-            <InputText @bind-Value="Exercise.Type" class="form-control col-sm-3"/>
-            <ValidationMessage For="@(() => Exercise.Type)"/>
+            <InputText @bind-Value="ExerciseDto.Type" class="form-control col-sm-3"/>
+            <ValidationMessage For="@(() => ExerciseDto.Type)"/>
         </div>
     </div>
+    
     <div class="form-group">
         <input type="submit" class="btn btn-primary" value="Save"/>
     </div>
