--- a/Netrom/Components/Pages/Home.razor
+++ b/Netrom/Components/Pages/Home.razor
@@ -1,10 +1,10 @@
-﻿@page "/"
-
-<PageTitle>Home</PageTitle>
-
-<h1>Hello, world!</h1>
-
-
-
-
-
+﻿@* @page "/" *@
+@* *@
+@* <PageTitle>Home</PageTitle> *@
+@* *@
+@* <h1>Hello, world!</h1> *@
+@* *@
+@* *@
+@* *@
+@* *@
+@* *@
