--- a/Netrom/Components/_Imports.razor
+++ b/Netrom/Components/_Imports.razor
@@ -12,4 +12,5 @@
 @using Blazorise.Components
 @using Blazorise.DataGrid
 @using Netrom.Entities
-
+@using Netrom.Components.Layout
+@using Microsoft.AspNetCore.Components.Authorization
