--- a/Netrom/Components/Pages/AddUserPage.razor
+++ b/Netrom/Components/Pages/AddUserPage.razor
@@ -26,7 +26,6 @@
                 <ValidationMessage For="@(() => UserDto.LastName)"/>
             </div>
         </div>
-
         <div class="form-group">
             <label> Select your gender: </label>
             <InputSelect @bind-Value="@UserDto.Gender">
@@ -43,6 +42,13 @@
             <div>
                 <InputDate @bind-Value="UserDto.Birthday" class="form-control col-sm-3"/>
                 <ValidationMessage For="@(() => UserDto.Birthday)"/>
+            </div>
+        </div>
+        <div class="form-group">
+            <label>Email:</label>
+            <div>
+                <InputText @bind-Value="UserDto.Email" class="form-control col-sm-3"/>
+                <ValidationMessage For="@(() => UserDto.Email)"/>
             </div>
         </div>
         <button type="submit">Submit</button>
