--- a/Netrom/Components/Pages/Clients.css
+++ b/Netrom/Components/Pages/Clients.css
@@ -1,21 +1,3 @@
-/*.pagination {*/
-/*    display: flex;*/
-/*    justify-content: center;*/
-/*    align-items: center;*/
-/*    margin-top: 20px;*/
-/*}*/
-
-/*.pagination span {*/
-/*    margin: 0 10px;*/
-/*    font-weight: bold;*/
-/*    font-size: 1.2em;*/
-/*    color: #333;*/
-/*}*/
-
-/*.pagination button {*/
-/*    padding: 5px 10px;*/
-/*    margin: 0 5px;*/
-/*}*/
 
 .cards-container {
     display: flex;
@@ -31,6 +13,7 @@
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
     margin: 10px;
     width: 300px;
+    background-color: #3a0647;
 }
 
 .card-body {
